@@ -70,6 +70,9 @@ The following command-line options are recognized by
 .B \-absname
 Show absolute filenames in error messages.
 .TP
+.B \-no-absname
+Do not try to show absolute filenames in error messages.
+.TP
 .BI \-I \ directory
 Add the given directory to the list of directories searched for
 source and compiled files. By default, the current directory is
