@@ -60,6 +60,9 @@ The following command-line options are recognized by
 .B \-absname
 Show absolute filenames in error messages.
 .TP
+.B \-no-absname
+Do not try to show absolute filenames in error messages (default).
+.TP
 .B \-all
 Generate dependencies on all required files, rather than assuming
 implicit dependencies.
