@@ -166,6 +166,9 @@ excluding the filename.
 .B \-absname
 Show absolute filenames in error messages.
 .TP
+.B \-no-absname
+Do not try to show absolute filenames in error messages.
+.TP
 .B \-annot
 Deprecated since OCaml 4.11. Please use
 .BR \-bin-annot
